--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /AppWebMVC2/build/
 /AppWebMVC2/dist/
+/AppWebMVCHtml5/build/
+/AppWebMVCHtml5/dist/
+/AppWebUploadFile/build/
+/AppWebUploadFile/dist/
