--- a/AppWebUploadFile/nbproject/private/private.properties
+++ b/AppWebUploadFile/nbproject/private/private.properties
@@ -1,1 +1,10 @@
+deploy.ant.properties.file=/home/willian/.netbeans/19/config/PayaraEE6/Properties/pfv3-2102279950.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=/home/willian/Documentos/payara51/glassfish/domains/domain1
+j2ee.server.home=/home/willian/Documentos/payara51/glassfish
+j2ee.server.instance=[/home/willian/Documentos/payara51/glassfish:/home/willian/Documentos/payara51/glassfish/domains/domain1]deployer:pfv5ee8:localhost:4848
+j2ee.server.middleware=/home/willian/Documentos/payara51
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/willian/.netbeans/19/build.properties
