--- a/ConsultaCorreios/nbproject/project.properties
+++ b/ConsultaCorreios/nbproject/project.properties
@@ -30,8 +30,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ConsultaCorreios.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${libs.JAX-WS-ENDORSED.classpath}
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
